--- a/ios-web-extension Extension/Resources/popup.css
+++ b/ios-web-extension Extension/Resources/popup.css
@@ -3,11 +3,18 @@
 }
 
 body {
+    height:-webkit-fill-available;
     width: 100px;
     padding: 10px;
+    margin: auto;
+    
 
     font-family: system-ui;
     text-align: center;
+}
+
+div{
+    margin-top:50%;
 }
 
 @media (prefers-color-scheme: dark) {
